<resources>
    <string name="app_name">Google Pay with Stripe Demo</string>
    <string name="payment_price_title">Donate: (USD)</string>
    <string name="payment_price">1.00</string>
    <string name="payment_result_title">Return Stripe Token:</string>
    <string name="payment_result">----</string>
    <string name="demo_desc">It won\'t really charge in testing environment. This is just a simple demo for google pay process and show you the returning stripe token.</string>
</resources>
