<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_price_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textview_price"
        app:layout_constraintStart_toStartOf="@+id/textview_stripe_token_title"
        />

    <TextView
        android:id="@+id/textview_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_price"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textview_stripe_token_title"
        app:layout_constraintStart_toStartOf="@+id/textview_stripe_token_title"
        />

    <TextView
        android:id="@+id/textview_stripe_token_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_result_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_buy"
        />

    <TextView
        android:id="@+id/textview_stripe_token"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/payment_result"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textview_stripe_token_title"
        app:layout_constraintTop_toBottomOf="@+id/textview_stripe_token_title"
        />

    <TextView
        android:id="@+id/textview_stripe_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_desc"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_buy"
        />

    <include
        android:id="@+id/button_buy"
        layout="@layout/buy_with_googlepay_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>